Fixed bug where page would scroll when cursor went off screen

--- a/client/src/containers/cursors/Cursors.css
+++ b/client/src/containers/cursors/Cursors.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .cursor {
